--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
 	},
 	"author": "Eduardo Ferras",
 	"devDependencies": {
-		"@eslint/js": "^9.38.0",
-		"@types/chrome": "^0.1.24",
-		"@vitest/coverage-v8": "^4.0.3",
-		"@vitest/ui": "^4.0.3",
-		"eslint": "^9.38.0",
-		"eslint-config-prettier": "^10.1.8",
-		"globals": "^16.4.0",
-		"jiti": "^2.6.1",
-		"prettier": "^3.6.2",
-		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.46.2",
-		"vite-tsconfig-paths": "^5.1.4",
-		"vitest": "^4.0.3"
+		"@eslint/js": "9.38.0",
+		"@types/chrome": "0.1.24",
+		"@vitest/coverage-v8": "4.0.3",
+		"@vitest/ui": "4.0.3",
+		"eslint": "9.38.0",
+		"eslint-config-prettier": "10.1.8",
+		"globals": "16.4.0",
+		"jiti": "2.6.1",
+		"prettier": "3.6.2",
+		"typescript": "5.9.3",
+		"typescript-eslint": "8.46.2",
+		"vite-tsconfig-paths": "5.1.4",
+		"vitest": "4.0.3"
 	},
 	"dependencies": {
-		"tsup": "^8.5.0"
+		"tsup": "8.5.0"
 	}
 }
