--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "extension-yt-search",
 	"version": "1.0.0",
+	"private": true,
 	"description": "Context menu to search selected text on Youtube",
 	"main": "index.js",
 	"scripts": {
@@ -11,25 +12,30 @@
 		"lint:fix": "eslint . --ext .ts,.js --fix",
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
-		"build": "tsup"
+		"build": "tsup",
+		"changeset": "changeset",
+		"version": "changeset version && pnpm install --no-frozen-lockfile",
+		"release": "changeset publish"
 	},
 	"author": "Eduardo Ferras",
 	"devDependencies": {
-		"@eslint/js": "^9.38.0",
-		"@types/chrome": "^0.1.24",
-		"@vitest/coverage-v8": "^4.0.3",
-		"@vitest/ui": "^4.0.3",
-		"eslint": "^9.38.0",
-		"eslint-config-prettier": "^10.1.8",
-		"globals": "^16.4.0",
-		"jiti": "^2.6.1",
-		"prettier": "^3.6.2",
-		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.46.2",
-		"vite-tsconfig-paths": "^5.1.4",
-		"vitest": "^4.0.3"
+		"@changesets/cli": "2.29.8",
+		"@eslint/js": "9.38.0",
+		"@types/chrome": "0.1.24",
+		"@vitest/coverage-v8": "4.0.3",
+		"@vitest/ui": "4.0.3",
+		"eslint": "9.38.0",
+		"eslint-config-prettier": "10.1.8",
+		"globals": "16.4.0",
+		"jiti": "2.6.1",
+		"prettier": "3.6.2",
+		"typescript": "5.9.3",
+		"typescript-eslint": "8.46.2",
+		"vite-tsconfig-paths": "5.1.4",
+		"vitest": "4.0.3"
 	},
 	"dependencies": {
-		"tsup": "^8.5.0"
-	}
+		"tsup": "8.5.0"
+	},
+	"packageManager": "pnpm@10.28.1"
 }
