--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@changesets/cli": "2.29.8",
 		"@eslint/js": "9.38.0",
 		"@types/chrome": "0.1.24",
+		"@types/node": "25.1.0",
 		"@vitest/coverage-v8": "4.0.3",
 		"@vitest/ui": "4.0.3",
 		"eslint": "9.38.0",
