--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@changesets/cli": "2.29.8",
 		"@eslint/js": "9.38.0",
 		"@types/chrome": "0.1.24",
+		"@types/node": "25.1.0",
 		"@vitest/coverage-v8": "4.0.3",
 		"@vitest/ui": "4.0.3",
 		"eslint": "9.38.0",
@@ -29,13 +30,11 @@
 		"globals": "16.4.0",
 		"jiti": "2.6.1",
 		"prettier": "3.6.2",
+		"tsup": "8.5.1",
 		"typescript": "5.9.3",
 		"typescript-eslint": "8.46.2",
 		"vite-tsconfig-paths": "5.1.4",
 		"vitest": "4.0.3"
-	},
-	"dependencies": {
-		"tsup": "8.5.0"
 	},
 	"packageManager": "pnpm@10.28.1"
 }
