replace eslint and prettier with biome

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,7 @@
 {
-	"recommendations": [
-		"dbaeumer.vscode-eslint",
-		"esbenp.prettier-vscode",
-		"editorconfig.editorconfig",
-		"vitest.explorer"
-	]
+  "recommendations": [
+    "biomejs.biome",
+    "editorconfig.editorconfig",
+    "vitest.explorer"
+  ]
 }
