--- a/package.json
+++ b/package.json
@@ -1,40 +1,39 @@
 {
-	"name": "extension-yt-search",
-	"version": "1.0.0",
-	"private": true,
-	"description": "Context menu to search selected text on Youtube",
-	"main": "index.js",
-	"scripts": {
-		"test": "vitest",
-		"test:watch": "vitest --watch",
-		"coverage": "vitest run --coverage",
-		"lint": "eslint . --ext .ts,.js",
-		"lint:fix": "eslint . --ext .ts,.js --fix",
-		"format": "prettier --write .",
-		"format:check": "prettier --check .",
-		"build": "tsup",
-		"changeset": "changeset",
-		"version": "changeset version && pnpm install --no-frozen-lockfile",
-		"release": "changeset publish"
-	},
-	"author": "Eduardo Ferras",
-	"devDependencies": {
-		"@changesets/cli": "2.29.8",
-		"@eslint/js": "9.38.0",
-		"@types/chrome": "0.1.24",
-		"@types/node": "25.1.0",
-		"@vitest/coverage-v8": "4.0.3",
-		"@vitest/ui": "4.0.3",
-		"eslint": "9.38.0",
-		"eslint-config-prettier": "10.1.8",
-		"globals": "16.4.0",
-		"jiti": "2.6.1",
-		"prettier": "3.6.2",
-		"tsup": "8.5.1",
-		"typescript": "5.9.3",
-		"typescript-eslint": "8.46.2",
-		"vite-tsconfig-paths": "5.1.4",
-		"vitest": "4.0.3"
-	},
-	"packageManager": "pnpm@10.28.1"
+  "name": "extension-yt-search",
+  "version": "1.0.0",
+  "private": true,
+  "description": "Context menu to search selected text on Youtube",
+  "main": "index.js",
+  "scripts": {
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "coverage": "vitest run --coverage",
+    "lint": "biome check",
+    "lint:fix": "biome check --write",
+    "build": "tsup",
+    "changeset": "changeset",
+    "version": "changeset version && pnpm install --no-frozen-lockfile",
+    "release": "changeset publish"
+  },
+  "author": "Eduardo Ferras",
+  "devDependencies": {
+    "@biomejs/biome": "2.3.13",
+    "@changesets/cli": "2.29.8",
+    "@eslint/js": "9.38.0",
+    "@types/chrome": "0.1.24",
+    "@types/node": "25.1.0",
+    "@vitest/coverage-v8": "4.0.3",
+    "@vitest/ui": "4.0.3",
+    "eslint": "9.38.0",
+    "eslint-config-prettier": "10.1.8",
+    "globals": "16.4.0",
+    "jiti": "2.6.1",
+    "prettier": "3.6.2",
+    "tsup": "8.5.1",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.46.2",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "4.0.3"
+  },
+  "packageManager": "pnpm@10.28.1"
 }
