add handlers path in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "paths": {
       "@utils/*": ["utils/*"],
       "@constants/*": ["constants/*"],
+      "@handlers/*": ["handlers/*"],
       "@/*": ["*"]
     }
   },
