--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "extension-yt-search",
+  "name": "youtube-search-extension",
   "version": "1.0.0",
   "private": true,
   "description": "Context menu to search selected text on Youtube",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "vitest",
     "test:watch": "vitest --watch",
